--- a/easy-auth-api/pom.xml
+++ b/easy-auth-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>easy-auth</artifactId>
         <groupId>cn.chenzw.auth</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0.RELAESE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>cn.chenzw.auth</groupId>
             <artifactId>easy-auth-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0.RELAESE</version>
         </dependency>
     </dependencies>
 
