--- a/easy-auth-ui/pom.xml
+++ b/easy-auth-ui/pom.xml
@@ -5,10 +5,57 @@
     <parent>
         <artifactId>easy-auth</artifactId>
         <groupId>cn.chenzw.auth</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0.RELAESE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>easy-auth-ui</artifactId>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/dist</directory>
+                <targetPath>META-INF/resources/</targetPath>
+            </resource>
+        </resources>
+
+        <plugins>
+
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.7.6</version>
+                <executions>
+                    <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <configuration>
+                            <nodeVersion>v10.16.3</nodeVersion>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>npm run build</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run build</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
