--- a/easy-auth-ui/package.json
+++ b/easy-auth-ui/package.json
@@ -30,16 +30,17 @@
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "element-ui": "^2.12.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
-    "copy-webpack-plugin": "^5.0.4",
     "html-webpack-include-assets-plugin": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
+    "js-cookie": "^2.2.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
